--- a/NB/Sklearn.ipynb
+++ b/NB/Sklearn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:33c07b3270f6ad9c8001f89de6945b1f577ca8a490ad8012bffe2b19a4d06601"
+  "signature": "sha256:c4ead341865444f7f41322d1f299f3af354290a7938aa332731c7c7daf5517a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -366,6 +366,24 @@
       }
      ],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "11.25"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
